// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PayPalMarks /> should throw an error when no components are passed to the PayPalScriptProvider 1`] = `
"Unable to render <PayPalMarks /> because window.paypal.Marks is undefined.
To fix the issue, add 'marks' to the list of components passed to the parent PayPalScriptProvider:
\`<PayPalScriptProvider options={{ components: 'marks'}}>\`."
`;

exports[`<PayPalMarks /> should throw an error when the 'marks' component is missing from the components list passed to the PayPalScriptProvider 1`] = `
"Unable to render <PayPalMarks /> because window.paypal.Marks is undefined.
To fix the issue, add 'marks' to the list of components passed to the parent PayPalScriptProvider:
\`<PayPalScriptProvider options={{ components: 'buttons,messages,marks'}}>\`."
`;
